--- a/apps/api/Dockerfile
+++ b/apps/api/Dockerfile
@@ -29,8 +29,7 @@ COPY --from=build /app /app
 
 
 # Start the server by default, this can be overwritten at runtime
-EXPOSE 8080
+EXPOSE 3000
 ENV PUPPETEER_EXECUTABLE_PATH="/usr/bin/chromium"
-CMD [ "pnpm", "run", "start:production" ]
-CMD [ "pnpm", "run", "worker:production" ]
+CMD [ "pnpm", "run", "start:all" ]
 
