--- a/apps/api/package.json
+++ b/apps/api/package.json
@@ -19,7 +19,8 @@
     "mongo-docker": "docker run -d -p 2717:27017 -v ./mongo-data:/data/db --name mongodb mongo:latest",
     "mongo-docker-console": "docker exec -it mongodb mongosh",
     "run-example": "npx ts-node src/example.ts",
-    "deploy:fly:staging": "fly deploy -c fly.staging.toml"
+    "deploy:fly:staging": "fly deploy -c fly.staging.toml",
+    "start:all": "tsc && (node dist/src/index.js & node dist/src/services/queue-worker.js)"
   },
   "author": "",
   "license": "ISC",
